# kdewin-tools

./: CMakeLists.txt  KDEWinToolsConfig.cmake.in  KDEWinToolsConfigVersion.cmake.in  readme.txt
create_hash_table/: CMakeLists.txt
lib/: helper.cpp  helper.h
mt/: CMakeLists.txt
png2ico/: CMakeLists.txt  qanihandler.cpp  qcurhandler.cpp  qicohandler.cpp
svg2ico/: CMakeLists.txt  svg2ico.cpp
svg2multipng/: CMakeLists.txt  svg2multipng.cpp
